# MANTIS_GNN_Stocks

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: real_feeds_950_config.yaml  sample_config.yaml  yfinance_config.yaml
data/sample/: real_feeds_950_sample_output.csv  sample_output.csv  yfinance_sample_output.csv
docs/: architecture.md  final_csv_schema.md
outputs/: mantis_financial_ecosystem_dataset.csv
scripts/: run_sample_pipeline.py
src/mantis_financial_graph/: __init__.py  config.py  utils.py
src/mantis_financial_graph/data/: real_feeds.py  synthetic.py  universe.py  yfinance_loader.py
src/mantis_financial_graph/export/: csv_exporter.py
src/mantis_financial_graph/features/: financial.py  graph_stats.py  world_events.py
src/mantis_financial_graph/graph/: builder.py
src/mantis_financial_graph/models/: gnn.py
src/mantis_financial_graph/pipeline/: run_pipeline.py
src/mantis_financial_graph/training/: train.py
